# syntheticdata--generator

./: .gitignore  README.md  SETUP_LOG.md  dados_sinteticos (6).csv  fases.md  importer_test.py  meu_arquivo_gerado.csv  pyproject.toml
config/: exemplo.json
documentacao/: SETUP_LOG.md  documentacaoetapa1.md  documentacaofase1.md  fases.md
src/gerador_dados/: geradores.py  main.py  modelos.py  servicos.py  utils_csv.py
templates/: base.html  index.html
tests/: test_api.py  test_core.py
